fix some alignment in main title

--- a/src/Assets/css/Style.css
+++ b/src/Assets/css/Style.css
@@ -75,7 +75,7 @@
 }
 
 .text{
-    padding: 26px 10px;
+    padding: 6px 10px;
     font-size: 79px;
     /* border: 2px solid; */
     font-family: serif;
